--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -339,4 +338,12 @@ template {
 
 [hidden] {
   display: none;
+}
+
+
+///////////Application styles///////////
+@import "app/constant";
+body {
+  font-family: Arial, sans-serif;
+  background-color: $color-bg;
 }
